apply plugin: 'java'

repositories {
    jcenter()
}

dependencies {
    implementation 'com.google.guava:guava:23.0'
    testImplementation 'junit:junit:4.12'
}

group = 'com.adventofcode'
version = '1.0-SNAPSHOT'
sourceCompatibility = '12'

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}